fix centering when overflow.

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ html{
 body{
     background-color: rgb(57, 247, 231);
     padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .title{
@@ -32,7 +35,7 @@ body{
 .container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 10px;
 }
 
